--- a/car_rent/pubspec.yaml
+++ b/car_rent/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.5.2
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
