--- a/car_rent/pubspec.yaml
+++ b/car_rent/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_storage: ^12.4.5
   cloud_firestore: ^5.6.6
   image_picker: ^1.1.2
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
