--- a/car_rent/pubspec.yaml
+++ b/car_rent/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^5.6.6
   image_picker: ^1.1.2
   video_player: ^2.9.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
