--- a/car_rent/pubspec.yaml
+++ b/car_rent/pubspec.yaml
@@ -37,10 +37,13 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   firebase_storage: ^12.4.5
-  cloud_firestore: ^5.6.6
+  cloud_firestore: ^5.6.7
   image_picker: ^1.1.2
   video_player: ^2.9.5
   path: ^1.9.1
+  intl: ^0.20.2
+  # intl: ^0.20.2
+  # flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
