--- a/car_rent/pubspec.yaml
+++ b/car_rent/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   video_player: ^2.9.5
   path: ^1.9.1
   intl: ^0.20.2
+  connectivity_plus: ^6.1.4
+  pull_to_refresh: ^2.0.0
+  flutter_spinkit: ^5.2.1
   # intl: ^0.20.2
   # flutter_local_notifications: ^19.1.0
 
